# pal-300-bracket

./: .editorconfig  .gitattributes  .gitignore  CNAME  README.md  index.css  index.html  index.js  index.min.css  index.min.css.map  index.min.js  index.min.js.map
.github/workflows/: discord-notif.yml  gh-pages.yml  python.yml
bot/: .env.example  .gitignore  bot.py  pyproject.toml  requirements.txt
bot/bracketbot/: __init__.py  bracketbot.py
bot/bracketbot/cogs/: ping.py  round_info.py  tourney_management.py
bot/bracketbot/cogs/checks/: is_owner.py  owner_only.py
bot/bracketbot/helpers/: __init__.py  find_key_nonrecursive.py
bot/cogs/: ping.py  round_info.py
bot/cogs/helpers/: checks.py
data/: episodes.json  episodes.min.json  structure.json  structure.min.json  tourney-seeds.csv
web/: gulpfile.js  package.json
web/data/: episodes.min.json  structure.min.json
web/src/: index.css  index.html  index.js
web/src/data/: structure.json
